# mictlan

./: .envrc  .gitattributes  .gitignore  .gitmodules  .htaccess  .mise.toml  .secrets  README.md  biome.json  composer.json  flake.nix  go.work  go.work.sum  lake-manifest.json  lakefile.lean  mictlan.code-workspace  package.json  pyproject.toml  workspace.php  workspace.yaml
apps/akinator/: .mise.toml  README.md  pyproject.toml
apps/akinator/akinator/common/: __init__.py  mysql_conn.py
apps/akinator/akinator/qa/: __init__.py  agent.py  command_repo.py  context.py  gemini_gen_data.py  generate_data.py  get_answer.py  mysql_repo.py  output.json  output_transformed.json  poc.py  repo.py  rmm_log.txt  selector.py  selector_v2.py  selector_v3.py  theory.ipynb  transform.py
apps/akinator/akinator/train/: README.md  __init__.py  command_repo.py  (+3 more)
apps/akinator/cmd/: cli.py
apps/akinator/docs/: demo.py  torch_tutorial.ipynb
apps/akinator/scripts/: convert.py  deploy.sh  generate_data.py  generate_data_gemini.py  get_answer.py  transform.py
apps/chathub/: README.md  pyproject.toml
apps/chathub/chathub/: README.md
apps/chathub/examples/: poc.ipynb  pocv2.ipynb
apps/chathub/scripts/: reload
apps/fssearch/: README.md  git_indexer.py  poc.ipynb  poc.py  poc_v2.ipynb  pyproject.toml
apps/fssearch/cmd/: git_indexer.py
apps/fssearch/examples/: poc_v2.ipynb
apps/funsearch-worker/: README.md  pyproject.toml
apps/llmsr-worker/: README.md  pyproject.toml
apps/syuron/: README.md  pyproject.toml
apps/syuron/julia/: Project.toml
apps/syuron/python/: pyproject.toml
artifacts/funsearch/: .gitignore  .mise.toml  Dockerfile  README.md  pyproject.toml  pyproject.toml.docker
artifacts/funsearch/apiserver/: README.md  example_prompt_rubber.txt  main.py
artifacts/funsearch/deployments/: README.md
artifacts/funsearch/docs/: memo.md
artifacts/funsearch/scripts/: run_example  run_mockui  tune_gemini.py
artifacts/funsearch/ui/: README.md  main.py
infra/: .envrc  .gitignore  .mise.toml  README.md  pyproject.toml
infra/cmd/: configure  deploy.py  deploy_oracle.py  generate_docker_compose.py
infra/cmd/ecosystem/: generate_docker_compose.py
infra/cmd/vpn/: deploy.py
infra/dev/: .terraform.lock.hcl  README.md  main.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf
infra/examples/: analyze_deps.ipynb
infra/home/: .mise.toml  README.md  main.tf  variables.tf
infra/infra/akinator/: 02-inittables.mysql.sql  compose.py
infra/infra/asyncsns/: __init__.py  compose.py  docker_compose.py
infra/infra/broker/: __init__.py  compose.py  docker_compose.py
infra/infra/chat/: compose.py  docker_compose.py
infra/infra/crawler/: __init__.py  compose.py
infra/infra/ecosystem/: __init__.py  compose.py  docker_compose.py
infra/infra/fediverse/: compose.py  init_postgres.tpl.py
infra/infra/idp/: __init__.py  config.tpl.py
infra/infra/knowledgebase/: .gitignore  __init__.py  affine.py  init_postgres.tpl.py
infra/infra/koemade/: 02-inittables.mysql.sql  mockdatagen.py
infra/infra/ldap/: __init__.py
infra/infra/llm/: __init__.py  docker_compose.py
infra/infra/mail/: README.md  __init__.py  docker_compose.py  login.test.py  nginx.conf.tpl.py
infra/infra/nosql/: __init__.py  docker_compose.py
infra/infra/observability/: __init__.py  compose.py  docker_compose.py
infra/infra/ossekai/: 02-inittables.mysql.sql  Dockerfile  README.md  __init__.py  compose.py  compose.test.py  docker_compose.py  docker_compose.test.py
infra/infra/proxy/: Dockerfile  __init__.py  cloudflare.py  compose.py  compose.test.py  docker_compose.py  docker_compose.test.py  entrypoint.sh  nginx.py
infra/infra/rdb/: __init__.py  docker_compose.py
infra/infra/relationaldb/: docker_compose.py
infra/infra/searchengine/: __init__.py  docker_compose.py  docker_compose.test.py
infra/infra/vpn/: __init__.py  compose.py  docker_compose.py  docker_compose.test.py  nginx.conf.tpl.py
infra/infra/zaiko/: 02-inittables.mysql.sql  __init__.py  compose.py  docker_compose.py  entrypoint.sh.tpl.py  stockconnector.tpl.py  stockconnector.yaml  stockconnector_mock.tpl.py  stockconnector_mock.yaml
playground/python/: checkgpu.py  conv.ipynb  demo.py  digest.py  inc.xlsx  llama.py  nemo.py  pyproject.toml
playground/python/shg/: shg.ipynb
python/: .env.python  pyproject.toml
python/pkg/: README.md
python/pkg/localfile/: __init__.py  print_source.py
python/pkg/mermaid/: mermaid.py
research/quantum/: .gitignore  README.md  chsh.ipynb  pyproject.toml
research/quantum/docs/: bit_opts.md  c2rot.ipynb  rkhs.md  unitary.md
research/quantum/examples/: bit_opts.py  chsh.ipynb  chsh2.ipynb  chsh_qiskit.ipynb  ibm_runtime.ipynb  qiskit_1.ipynb  qiskit_simulation.ipynb  quantum_learning.ipynb  ramsey.ipynb  simple_cirq.ipynb  teleportation.ipynb  traceout.ipynb
research/quantum/pennylane_challenges/: certificate_challenge_introduction.ipynb  comparing_expectation_values.ipynb  returning_expectation_values.ipynb  returning_tensor_product_observables.ipynb
research/syuron/: .gitignore  README.md  pyproject.toml
research/syuron/docs/: 3d_rotation.ipynb  ask.md  deepthinkans.md  domain_eff.ipynb  etd.md  jaxについて.md  manim_demo.ipynb  matryoshka_qpm.ipynb  matryoshka_structure_variables.md  modesolver.ipynb  phase_matching.ipynb  prove.ipynb  prove.md  quantum.md  references.md  shgの仕組み.md  srについて.md  study.md  thg.md  todo.md  テーマ紹介.md  研究目的.md
research/syuron/examples/: array_gridpoint.py  chirped_shg_efficiency.csv  dataset.json  domaingen.ipynb  flatness.ipynb  gdsfactory.ipynb  jax_nested_loop.py  jaxpr_graph.py  kensyou.ipynb  mnist_dist_demo.ipynb  mnist_example.md  npda.ipynb  paper_parameter_verification.ipynb  periodic_combination.ipynb  pn_keiretsu.ipynb  shg.ipynb  shg2.ipynb  shg3.ipynb  train.ipynb  train_poc.ipynb  two_segment_pros_search.ipynb  wgmodes_demo.ipynb  yamamoto.ipynb  yamamoto2.ipynb
research/syuron/julia/: .envrc  Manifest.toml  Project.toml  README.md  flake.nix
research/syuron/python/: pyproject.toml
research/syuron/syuron/: README.md
(+1335 files in other folders)
