[project]
name = "mictlan"
version = "0.1.0"
description = "all in one monorepo"
authors = [{ name = "Xolotl", email = "xolotl.mictl4n@gmail.com" }]
requires-python = ">=3.13.0, <3.14"
dependencies = [
    # scriptsで必要なpackage
    "nbconvert",
    "playwright",
    # Jupyterで使用するpackage
    "notebook",
    "matplotlib",
    "japanize_matplotlib",
    # workspace packages
    "llmsr-worker",
    "tmmax",
    "qpm",
    "tqdm",
]

[project.optional-dependencies]
cuda = ["jax[cuda]"]

[tool.uv]
package = false

[tool.uv.workspace]
members = ["apps/llmsr-worker", "research/qpm"]

[tool.uv.sources]
llmsr-worker = { workspace = true }
qpm = { workspace = true }

[tool.ruff]
include = ["scripts", "apps/llmsr-worker", "research"]
exclude = ["**/pb"]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D"]

[dependency-groups]
dev = ["grpcio-tools>=1.75.1"]
