[project]
name = "mictlan"
version = "0.1.0"
description = "all in one monorepo"
authors = [{ name = "Xolotl", email = "xolotl.mictl4n@gmail.com" }]
requires-python = ">=3.13.0, <3.14"
dependencies = [
    # scriptsで必要なpackage
    "nbconvert",
    "playwright",
    # Jupyterで使用するpackage
    "notebook",
    "ipywidgets",
    "tqdm",
    "plotly",
    # workspace packages
    "worker",
    "tmmax",
    "qpm",
]

[project.optional-dependencies]
cuda = ["jax[cuda]"]

[tool.uv]
package = false

[tool.uv.workspace]
members = ["apps/alphaprobe/apps/worker", "research/qpm"]

[tool.uv.sources]
worker = { workspace = true }
qpm = { workspace = true }

[tool.ruff]
include = ["scripts", "apps/alphaprobe/apps/worker", "research"]
exclude = ["**/pb"]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D"]

[tool.ruff.lint.per-file-ignores]
"test_*.py" = [
    "S101", # assert
    "S102", # exec
    "T201", # print
    "E501", # line too long
]

[dependency-groups]
dev = ["grpcio-tools>=1.75.1"]

[tool.pyright]
typeCheckingMode = "strict"
reportMissingTypeStubs = false
# pyrightの設定は個々のpyproject.tomlではなくrootに一元的に書く必要がある
executionEnvironments = [
    { root = "research/qpm", reportUnknownVariableType = "none", reportUnknownMemberType = "none", reportUnknownArgumentType = "none" },
]
