[project]
name = "infra"
version = "0.1.0"
description = "infrastructure as code"
authors = [{ name = "Xo1otl", email = "xolotl.mictl4n@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["workspace"]

[tool.uv.sources]
workspace = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
