[project]
name = "chathub"
version = "0.1.0"
description = ""
authors = [{ name = "Xo1otl", email = "xolotl.mictl4n@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10, <4.0" # Poetryの ^3.10 を変換
dependencies = [
    "ollama>=0.4.0,<0.5.0", # Poetryの ^0.4.0 を変換
    "GitPython>=3.1,<4.0",  # Poetryの ^3.1 を変換
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
