[project]
name = "fssearch"
version = "0.1.0"
description = ""
authors = [{ name = "Xo1otl", email = "xolotl.mictl4n@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10, <4.0" # Poetryの ^3.10 を変換
dependencies = [
    "meilisearch>=0.34.0",
    "GitPython>=3.1",
]

# ビルドシステムの設定 (hatchling を使用)
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
