[project]
name = "funsearch"
version = "0.1.0"
description = ""
authors = [{ name = "Xo1otl", email = "xolotl.mictl4n@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-genai",
    "optax",
    "pandas",
    "gradio",
    "matplotlib",
    "japanize_matplotlib",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
