[tool.poetry]
name = "playground"
version = "0.1.0"
description = ""
authors = ["Xo1otl <xolotl.mictl4n@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
huggingface-hub = "^0.25.0"
transformers = "^4.44.2"
torch = "^2.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
