[tool.poetry]
name = "playground"
version = "0.1.0"
description = ""
authors = ["Xo1otl <xolotl.mictl4n@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
huggingface-hub = "^0.26.0"
transformers = "^4.44.2"
torch = "^2.4.1"
accelerate = "^1.0.0"
bitsandbytes = "^0.44.0"
pandas = "^2.2.3"
numpy = "^2.1.1"
scipy = "^1.14.1"
matplotlib = "^3.9.2"
openpyxl = "^3.1.5"

[tool.poetry.extras]
gpu = ["torch", "accelerate", "huggingface-hub", "bitsandbytes", "transformers"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
