[project]
name = "quantum"
version = "0.1.0"
description = ""
authors = [{ name = "Xo1otl", email = "xolotl.mictl4n@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "qiskit>=1.2.4,<2.0.0",
    "qiskit-ibm-runtime>=0.41.1,<0.42.0",
    "pylatexenc>=2.10,<3.0.0",
    "qiskit-aer>=0.17.0,<0.18.0",
    "qulacs"
]
