[project]
name = "syuron"
version = "0.1.0"
description = ""
authors = [{ name = "Xo1otl", email = "xolotl.mictl4n@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.3",
    "scipy>=1.15.2",
    "numpy>=2.2.4",
    "matplotlib>=3.10.1",
    "jax[cuda12]>=0.5.2",
    "flax>=0.10.5",
    "tensorflow[and-cuda]",
    "tensorflow_datasets",
    "bayesian-optimization"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
