[project]
name = "syuron"
version = "0.1.0"
description = ""
authors = [{ name = "Xo1otl", email = "xolotl.mictl4n@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas",
    "scipy",
    "numpy",
    "matplotlib",
    "jax[cuda12]",
    "flax",
    "tensorflow_datasets",
    "bayesian-optimization",
    "matplotlib",
    "ipykernel",
    "gdsfactory[full]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
