[tool.poetry]
name = "syuron"
version = "0.1.0"
description = ""
authors = ["Xo1otl <xolotl.mictl4n@gmail.com>"]
readme = "README.md"
packages = [{ include = "syuron", from = "." }]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
scipy = "^1.14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
